deploy/k8s/04-worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: streamforge-worker
  namespace: streamforge
spec:
  replicas: 2
  selector:
    matchLabels:
      app: streamforge-worker
  template:
    metadata:
      labels:
        app: streamforge-worker
    spec:
      serviceAccountName: streamforge
      containers:
        - name: worker
          image: ghcr.io/officialasishkumar/streamforge:latest
          args: ["./cmd/worker"]
